<resources>
    <string name="wifi_fail_to_scan">"Can't scan for networks"</string>
    <string name="wifi_security_short_wep">WEP</string>
    <string name="wifi_security_short_wpa">WPA</string>
    <string name="wifi_security_short_wpa2">WPA2</string>
    <string name="wifi_security_short_wpa_wpa2">WPA/WPA2</string>
    <string name="wifi_security_short_psk_generic">@string/wifi_security_short_wpa_wpa2</string>
    <string name="wifi_security_short_eap">802.1x</string>
    <string name="wifi_security_none">None</string>
    <string name="wifi_security_wep">WEP</string>
    <string name="wifi_security_wpa">WPA PSK</string>
    <string name="wifi_security_wpa2">WPA2 PSK</string>
    <string name="wifi_security_wpa_wpa2">WPA/WPA2 PSK</string>
    <string name="wifi_security_psk_generic">@string/wifi_security_wpa_wpa2</string>
    <string name="wifi_security_eap">802.1x EAP</string>
    <string name="wifi_security_passpoint">Passpoint</string>
    <string name="wifi_remembered">Saved</string>
    <string name="wifi_disabled_generic">Disabled</string>
    <string name="wifi_disabled_network_failure">IP Configuration Failure</string>
    <string name="wifi_disabled_wifi_failure">WiFi Connection Failure</string>
    <string name="wifi_disabled_password_failure">Authentication problem</string>
    <string name="wifi_not_in_range">Not in range</string>
    <string name="wifi_no_internet">"No Internet Access Detected, won't automatically reconnect."</string>
    <string name="saved_network">Saved by %1$s</string>
    <string name="connected_via_wfa">Connected via Wi‑Fi assistant</string>
    <string name="connected_via_passpoint">Connected via %1$s</string>
    <string name="available_via_passpoint">Available via %1$s</string>
    <string name="settings_package">com.android.settings</string>
    <string name="certinstaller_package">com.android.certinstaller</string>
    <string name="wifi_connected_no_internet">Connected, no Internet</string>
    <string name="bluetooth_disconnected">Disconnected</string>
    <string name="bluetooth_disconnecting">Disconnecting…</string>
    <string name="bluetooth_connecting">Connecting…</string>
    <string name="bluetooth_connected">Connected</string>
    <string name="bluetooth_pairing">Pairing…</string>
    <string name="bluetooth_connected_no_headset">Connected (no phone)</string>
    <string name="bluetooth_connected_no_a2dp">Connected (no media)</string>
    <string name="bluetooth_connected_no_map">Connected (no message access)</string>
    <string name="bluetooth_connected_no_headset_no_a2dp">Connected (no phone or media)</string>
    <string name="bluetooth_profile_a2dp">Media audio</string>
    <string name="bluetooth_profile_headset">Call audio</string>
    <string name="bluetooth_profile_opp">File transfer</string>
    <string name="bluetooth_profile_hid">Input device</string>
    <string name="bluetooth_profile_textinput">Text input</string>
    <string name="bluetooth_profile_pan">Internet access</string>
    <string name="bluetooth_profile_pbap">Contact sharing</string>
    <string name="bluetooth_profile_pan_nap">Internet connection sharing</string>
    <string name="bluetooth_profile_map">Message Access</string>
    <string name="bluetooth_profile_sap">SIM Access</string>
    <string name="bluetooth_profile_pbap_tts">Contacts and Phone log</string>
    <string name="bluetooth_profile_pbap_summary">Use for contact sharing</string>
    <string name="bluetooth_profile_map_summary">Allow this paired device to access your messages.</string>
    <string name="bluetooth_profile_sap_summary">Allow this paired device to access your SIM card.</string>
    <string name="bluetooth_a2dp_profile_summary_connected">Connected for media audio</string>
    <string name="bluetooth_headset_profile_summary_connected">Connected for call audio</string>
    <string name="bluetooth_opp_profile_summary_connected">Connected to file transfer server</string>
    <string name="bluetooth_map_profile_summary_connected">Connected to map</string>
    <string name="bluetooth_sap_profile_summary_connected">Connected to SAP</string>
    <string name="bluetooth_opp_profile_summary_not_connected">Not connected to file transfer server</string>
    <string name="bluetooth_hid_profile_summary_connected">Connected as input device</string>
    <string name="bluetooth_pan_user_profile_summary_connected">Connected to device for Internet access</string>
    <string name="bluetooth_pan_nap_profile_summary_connected">Sharing local Internet connection with device</string>
    <string name="bluetooth_summary_connected_to_a2dp_headset">Connected for call and media audio</string>
    <string name="bluetooth_pan_nap_connected">Connected to provide Internet connection</string>
    <string name="bluetooth_pan_panu_connected">Connected to access Internet connection</string>
    <string name="bluetooth_pan_profile_summary_use_for">Use for Internet access.</string>
    <string name="bluetooth_map_profile_summary_use_for">Use for map</string>
    <string name="bluetooth_sap_profile_summary_use_for">Use for SIM access</string>
    <string name="bluetooth_a2dp_profile_summary_use_for">Use for media audio</string>
    <string name="bluetooth_headset_profile_summary_use_for">Use for phone audio</string>
    <string name="bluetooth_opp_profile_summary_use_for">Use for file transfer</string>
    <string name="bluetooth_hid_profile_summary_use_for">Use for input</string>
    <string name="bluetooth_pairing_accept">Pair</string>
    <string name="bluetooth_pairing_accept_all_caps">PAIR</string>
    <string name="bluetooth_pairing_decline">Cancel</string>
    <string name="bluetooth_pairing_will_share_phonebook">Pairing grants access to your contacts and call history when connected.</string>
    <string name="bluetooth_pairing_error_message">"Couldn't pair with %1$s."</string>
    <string name="bluetooth_pairing_pin_error_message">Unable to pair with %1$s. Make sure %2$s is ready to pair.</string>
    <string name="bluetooth_pairing_device_down_error_message">"Can't communicate with %1$s."</string>
    <string name="bluetooth_pairing_rejected_error_message">Pairing rejected by %1$s.</string>
    <string name="bluetooth_tethering_cannot_connect_while_connected_to_wifi">Unable to use Bluetooth tethering while connected to Wi-Fi network.</string>
    <string name="bluetooth_hid_connection_error_message">Unable to connect device to Bluetooth input device while using it as Bluetooth input device.</string>
    <string name="accessibility_wifi_off">Wifi off.</string>
    <string name="accessibility_no_wifi">Wifi disconnected.</string>
    <string name="accessibility_wifi_one_bar">Wifi one bar.</string>
    <string name="accessibility_wifi_two_bars">Wifi two bars.</string>
    <string name="accessibility_wifi_three_bars">Wifi three bars.</string>
    <string name="accessibility_wifi_signal_full">Wifi signal full.</string>
    <string name="unknown">Unknown</string>
    <string name="full_wday_month_day_no_year">EEEE, MMMM d</string>
    <string name="full_wday_day_month_no_year">EEEE, d MMMM</string>
    <string name="sview_cover_wday_month_day_no_year">E, MMMM d</string>
    <string name="sview_cover_wday_day_month_no_year">E, d MMMM</string>
    <string name="sview_cover_dual_wday_month_day_no_year">E, MMM d</string>
    <string name="sview_cover_dual_wday_day_month_no_year">E, d MMM</string>
    <string name="clear_cover_wday_day">E</string>
    <string name="clear_cover_month_day_no_year">MMM d</string>
    <string name="clear_cover_day_month_no_year">d MMM</string>
    <string name="china_country_name">china</string>
    <string name="date_time_set">Set</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="clearcover_exit_button">Exit</string>
    <string name="clearcover_music_widget_unkown">Unknown</string>
    <string name="clearcover_no_missed_event">You have no missed events</string>
    <string name="clearcover_1_missed_call">You have 1 missed call</string>
    <string name="clearcover_1_unread_message">You have 1 unread message</string>
    <string name="clearcover_n_missed_calls">You have %1$d missed calls</string>
    <string name="clearcover_n_unread_messages">You have %1$d unread messages</string>
    <string name="clearcover_calls_and_messages">You have %1$d missed calls and %2$d unread messages</string>
    <string name="zzz_tts_temp_celsius">Celsius</string>
    <string name="zzz_tts_temp_fahrenheit">Fahrenheit</string>
    <string name="zzz_tts_temperature">Degree</string>
    <string name="volumepanel_ringtone">Ringtone</string>
    <string name="volumepanel_media">Media</string>
    <string name="volumepanel_notification">Notifications</string>
    <string name="volumepanel_system">System</string>
    <string name="s_view_cover_shortcuts_camera_text">Camera</string>
    <string name="s_view_cover_shortcuts_quick_memo_text">Action Memo</string>
    <string name="s_view_cover_shortcuts_music_player_text">Music</string>
    <string name="cmas_presidential_alert">Presidential Alert</string>
    <string name="cmas_extreme_alert">Extreme Alert</string>
    <string name="cmas_severe_alert ">Severe Alert</string>
    <string name="cmas_amber_alert">Amber Alert</string>
    <string name="cmas_presidential_alerts">Presidential alerts</string>
    <string name="cmas_extreme_alerts">Extreme alerts</string>
    <string name="cmas_severe_alerts">Severe alerts</string>
    <string name="cmas_amber_alerts">AMBER alerts</string>
    <string name="cmas_emergency_alerts">Emergency alerts</string>
    <string name="sae_presidential_alert">Presidential alert</string>
    <string name="new_message_title">Messaging</string>
    <string name="message_count">%d new messages</string>
    <string name="new_message">Message</string>
    <string name="cb_msg_header">CB messages</string>
    <string name="push_message_sender">Push message</string>
    <string name="s_view_cover_celsius">℃</string>
    <string name="s_view_cover_fahrenheit">℉</string>
    <string name="s_view_cover_temp_unit">°</string>
    <string name="select_background_color">Set S View window wallpaper</string>
    <string name="select_background_color_title">Set wallpaper</string>
    <string name="cmas_cmas_test_message">Test Alert</string>
    <string name="s_view_window_theme">S View window wallpaper</string>
    <string name="s_view_info_cover">Select items to display</string>
    <string name="s_view_screen_time_out">Screen timeout</string>
    <string name="s_view_screen_roaming">Roaming</string>
    <string name="s_view_screen_home">Home</string>
    <string name="missed_call_title">Missed call</string>
    <string name="missed_calls_count">%d missed calls</string>
    <string name="kg_login_username_hint">Username (email)</string>
    <string name="kg_login_password_hint">Password</string>
    <string name="kg_login_submit_button">Sign in</string>
    <string name="uds_popup_textPoint1">Turn off background data for all applications using data. Allows enabling background data usage to only essential applications selected by you.</string>
    <string name="uds_popup_textPoint3">Compresses data with Opera Max.</string>
    <string name="uds_popup_note">Note:</string>
    <string name="uds_popup_textNote1">Data usage information is measured by your device. Your service provides may account for data usage differently.</string>
    <string name="uds_popup_textNote2">Notifications, downloading and playing content will be restricted via all apps whose background data is blocked.</string>
    <string name="uds_popup_textNote3">Compressing data will lower the quality of content.</string>
    <string name="uds_popup_checkbox">Enable mobile data always when mode is enabled</string>
    <string name="accessibility_desc_floating_back">Back</string>
    <string name="accessibility_desc_floating_more">More</string>
    <string name="accessibility_desc_floating_hide">Hide</string>
</resources>