<?xml version="1.0" encoding="utf-8"?>
<com.android.systemui.statusbar.phone.sub.FloatingKeyButtonLayout android:id="@id/floating_key_layout" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:systemui="http://schemas.android.com/apk/res/com.android.systemui">
    <com.android.systemui.statusbar.policy.KeyButtonView android:id="@id/floating_more_menu" android:background="@drawable/floating_button_bg" android:visibility="gone" android:layout_width="54.0dip" android:layout_height="54.0dip" android:src="@drawable/floating_more_menu_button" android:scaleType="centerInside" android:contentDescription="@string/accessibility_desc_floating_more" systemui:keyCode="82" systemui:floatingKey="true" />
    <ImageView android:id="@id/floating_hide" android:background="@drawable/floating_button_bg" android:visibility="gone" android:layout_width="54.0dip" android:layout_height="54.0dip" android:src="@drawable/floating_hide_button" android:scaleType="centerInside" android:contentDescription="@string/accessibility_desc_floating_hide" />
    <com.android.systemui.statusbar.policy.KeyButtonView android:id="@id/floating_back" android:background="@drawable/floating_button_bg" android:visibility="gone" android:layout_width="54.0dip" android:layout_height="54.0dip" android:src="@drawable/floating_back_key_button" android:scaleType="centerInside" android:contentDescription="@string/accessibility_desc_floating_back" systemui:keyCode="4" systemui:floatingKey="true" />
</com.android.systemui.statusbar.phone.sub.FloatingKeyButtonLayout>