<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginTop="16.0dip" android:layout_marginRight="24.0dip">
            <ImageView android:id="@id/bullet1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:src="@drawable/uds_im_bullet_dialog" />
            <TextView android:textSize="17.0dip" android:id="@id/textPoint1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="6.0dip" android:text="@string/uds_popup_textPoint1" android:fontFamily="sec-roboto-light" />
        </LinearLayout>
        <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginTop="7.0dip" android:layout_marginRight="24.0dip">
            <ImageView android:id="@id/bullet3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:src="@drawable/uds_im_bullet_dialog" />
            <TextView android:textSize="17.0dip" android:id="@id/textPoint3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="6.0dip" android:text="@string/uds_popup_textPoint3" android:fontFamily="sec-roboto-light" />
        </LinearLayout>
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginTop="7.0dip" android:layout_marginRight="24.0dip">
            <TextView android:textSize="17.0dip" android:id="@id/Note" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/uds_popup_note" android:fontFamily="sec-roboto-light" />
        </LinearLayout>
        <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginTop="7.0dip" android:layout_marginRight="24.0dip">
            <ImageView android:id="@id/bullet4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:src="@drawable/uds_im_bullet_dialog" />
            <TextView android:textSize="12.0dip" android:textStyle="bold" android:id="@id/textNote1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="6.0dip" android:text="@string/uds_popup_textNote1" android:fontFamily="sec-roboto-light" />
        </LinearLayout>
        <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginTop="7.0dip" android:layout_marginRight="24.0dip">
            <ImageView android:id="@id/bullet5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:src="@drawable/uds_im_bullet_dialog" />
            <TextView android:textSize="12.0dip" android:textStyle="bold" android:id="@id/textNote2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="6.0dip" android:text="@string/uds_popup_textNote2" android:fontFamily="sec-roboto-light" />
        </LinearLayout>
        <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginTop="7.0dip" android:layout_marginRight="24.0dip">
            <ImageView android:id="@id/bullet6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:src="@drawable/uds_im_bullet_dialog" />
            <TextView android:textSize="12.0dip" android:textStyle="bold" android:id="@id/textNote3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="6.0dip" android:text="@string/uds_popup_textNote3" android:fontFamily="sec-roboto-light" />
        </LinearLayout>
        <CheckBox android:textSize="11.0dip" android:gravity="start|center" android:id="@id/checkbox" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="18.0dip" android:layout_marginTop="12.0dip" android:layout_marginRight="18.0dip" android:layout_marginBottom="6.0dip" android:text="@string/uds_popup_checkbox" android:fontFamily="sec-roboto-light" />
    </LinearLayout>
</ScrollView>