<?xml version="1.0" encoding="utf-8"?>
<com.android.keyguard.KeyguardAccountView android:gravity="bottom|center" android:orientation="vertical" android:id="@id/keyguard_account_view" android:layout_width="fill_parent" android:layout_height="fill_parent" androidprv:layout_maxWidth="@dimen/keyguard_security_width"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:androidprv="http://schemas.android.com/apk/res-auto">
    <Space android:layout_width="fill_parent" android:layout_height="205.0dip" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <FrameLayout android:theme="@style/PasswordTheme" android:layout_gravity="center|top" android:id="@id/keyguard_bouncer_frame" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginStart="20.0dip" android:layout_marginEnd="20.0dip">
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <include android:id="@id/keyguard_message_area" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true" layout="@layout/keyguard_message_area" />
                <LinearLayout android:orientation="vertical" android:id="@id/login_area" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_marginTop="20.0dip">
                    <EditText android:textSize="17.0dip" android:textColor="@color/keyguard_text_color_white" android:textColorHint="@color/keyguard_text_color_white" android:id="@id/login" android:background="@null" android:layout_width="fill_parent" android:layout_height="26.0dip" android:layout_marginTop="7.0dip" android:layout_marginBottom="3.0dip" android:hint="@string/kg_login_username_hint" android:shadowColor="@color/keyguard_avatar_frame_shadow_color" android:layout_below="@id/keyguard_message_area" android:inputType="textEmailAddress|textNoSuggestions" android:privateImeOptions="inputType=option" style="@style/keyguard_text_shadow" />
                    <View android:id="@id/divider1" android:background="#40ffffff" android:layout_width="fill_parent" android:layout_height="2.0dip" />
                </LinearLayout>
                <Button android:textAppearance="?android:textAppearanceMedium" android:textSize="17.0dip" android:textColor="@color/keyguard_text_color_white" android:id="@id/ok" android:background="@drawable/ripple_effect_button_drawable" android:paddingLeft="5.0dip" android:paddingTop="9.0dip" android:paddingRight="5.0dip" android:paddingBottom="9.0dip" android:layout_width="wrap_content" android:layout_height="38.0dip" android:text="@string/kg_login_submit_button" android:shadowColor="@color/keyguard_avatar_frame_shadow_color" android:layout_below="@id/login_area" android:textAllCaps="@bool/kg_use_all_caps" android:layout_alignParentEnd="true" style="@style/keyguard_text_shadow" />
                <LinearLayout android:orientation="vertical" android:id="@id/password_area" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_marginRight="5.0dip" android:layout_below="@id/login_area" android:layout_toStartOf="@id/ok">
                    <EditText android:textSize="17.0dip" android:textColor="@color/keyguard_text_color_white" android:textColorHint="@color/keyguard_text_color_white" android:id="@id/password" android:background="@null" android:nextFocusRight="@id/ok" android:nextFocusDown="@id/ok" android:layout_width="fill_parent" android:layout_height="26.0dip" android:layout_marginBottom="3.0dip" android:hint="@string/kg_login_password_hint" android:shadowColor="@color/keyguard_avatar_frame_shadow_color" android:inputType="textPassword" android:privateImeOptions="inputType=option" style="@style/keyguard_text_shadow" />
                    <View android:id="@id/divider2" android:background="#40ffffff" android:layout_width="fill_parent" android:layout_height="2.0dip" />
                </LinearLayout>
            </RelativeLayout>
        </FrameLayout>
        <Space android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
    </LinearLayout>
</com.android.keyguard.KeyguardAccountView>